--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -6,6 +6,7 @@
 #include <commctrl.h>
 #include <richedit.h>
 #include "resource.h"
+#include "version.h"
 
 //
 // Menu resources
@@ -63,13 +64,14 @@ IDC_EVOLUTION_MAIN MENU
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDD_ABOUTBOX DIALOGEX 0, 0, 170, 62
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
-CAPTION "Info über Win32-Test"
+CAPTION "Info über Evolution"
 FONT 8, "MS Shell Dlg", 0, 0, 1
 {
     ICON            "", IDC_STATIC, 14, 14, 21, 20, SS_ICON, WS_EX_LEFT
-    LTEXT           "Win32-Test, Version 1.0", IDC_STATIC, 42, 14, 114, 8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
-    LTEXT           "Copyright (C) 2012", IDC_STATIC, 42, 26, 114, 8, SS_LEFT, WS_EX_LEFT
-    DEFPUSHBUTTON   "OK", IDOK, 113, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+//    LTEXT           "Evolution, Version 1.0", IDC_STATIC, 42, 14, 114, 8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
+    LTEXT           VER_PRODUCTNAME_STR,  IDC_STATIC, 42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
+    LTEXT           "Copyright (C) 2018", IDC_STATIC, 42, 26, 114,  8, SS_LEFT, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK",                 IDOK,      113, 41,  50, 14, WS_GROUP, WS_EX_LEFT
 }
 
 
