--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="win32_evoController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_packGridPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
