--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="win32_statistics.cpp" />
     <ClCompile Include="win32_status.cpp" />
     <ClCompile Include="win32_worker_thread.cpp" />
+    <ClCompile Include="win32_workThreadInterface.cpp" />
     <ClCompile Include="win32_wrappers.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -180,6 +181,7 @@
     <ClInclude Include="win32_statistics.h" />
     <ClInclude Include="win32_status.h" />
     <ClInclude Include="win32_worker_thread.h" />
+    <ClInclude Include="win32_workThreadInterface.h" />
     <ClInclude Include="win32_wrappers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
