--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="grid_model.h" />
     <ClInclude Include="individual.h" />
     <ClInclude Include="interaction.h" />
+    <ClInclude Include="MortalityTable.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StrategyData.h" />
     <ClInclude Include="targetver.h" />
