--- a/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="StrategyData.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="MortalityTable.h">
+      <Filter>Quelldateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
