--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -3,7 +3,7 @@ ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW 1770 401 721 661
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 4148 1115 301 131
-ShowWindow IDM_PERF_WINDOW SW_HIDE
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DISP_WINDOW 6075 1367 181 219
