--- a/EvolutionConsole/EvolutionConsole.vcxproj
+++ b/EvolutionConsole/EvolutionConsole.vcxproj
@@ -72,22 +72,22 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)ShapeLib;$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Release;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)ShapeLib;$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Debug;C:\Programme\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)ShapeLib;$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Debug;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)ShapeLib;$(SolutionDir)Utilities;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(SolutionDir)runtimeCPP;$(SolutionDir)Win32_history;$(SolutionDir)Win32_utilities;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Release;C:\Programme\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
