--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="win32_colorManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="win32_protocolServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -138,6 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_readBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_protocolServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
