--- a/NNet/NNetSimu/NNetSimu.vcxproj
+++ b/NNet/NNetSimu/NNetSimu.vcxproj
@@ -166,8 +166,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AnimationThread.h" />
     <ClInclude Include="AutoOpen.h" />
+    <ClInclude Include="ComputeThread.h" />
     <ClInclude Include="DrawModel.h" />
+    <ClInclude Include="NNetSimuReadBuffer.h" />
+    <ClInclude Include="Resource.h" />
     <ClInclude Include="win32_MainWindow.h" />
     <ClInclude Include="NNetModelStorage.h" />
     <ClInclude Include="NNetWrappers.h" />
@@ -177,6 +181,9 @@
     <ClInclude Include="win32_crsrWindow.h" />
     <ClInclude Include="win32_MiniWindow.h" />
     <ClInclude Include="win32_NNetWindow.h" />
+    <ClInclude Include="win32_scriptHook.h" />
+    <ClInclude Include="win32_status.h" />
+    <ClInclude Include="win32_triggerSoundDlg.h" />
     <ClInclude Include="win32_WorkThread.h" />
     <ClInclude Include="win32_WorkThreadInterface.h" />
     <ClInclude Include="win32_parameterDlg.h" />
@@ -192,6 +199,7 @@
     <ClInclude Include="win32_simulationControl.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ComputeThread.cpp" />
     <ClCompile Include="DrawModel.cpp" />
     <ClCompile Include="NNetModelStorage.cpp" />
     <ClCompile Include="NNetSimu.cpp" />
@@ -207,6 +215,8 @@
     <ClCompile Include="win32_NNetAppWindow.cpp" />
     <ClCompile Include="win32_NNetController.cpp" />
     <ClCompile Include="win32_NNetWindow.cpp" />
+    <ClCompile Include="win32_status.cpp" />
+    <ClCompile Include="win32_triggerSoundDlg.cpp" />
     <ClCompile Include="win32_WorkThread.cpp" />
     <ClCompile Include="win32_WorkThreadInterface.cpp" />
     <ClCompile Include="win32_parameterDlg.cpp" />
@@ -218,10 +228,14 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="NNetSimu.ico" />
+    <Image Include="NNetSimuWindows.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="disappear-sound-effect.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NNetSimuWindows.vcxproj" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
